package go.micro.srv.todo;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;

message Todo {
	required string id = 1 [(gogoproto.nullable) = true];
	required string task = 2 [(gogoproto.nullable) = false];
	required bool done = 3 [(gogoproto.nullable) = false];
	required int64 date = 4 [(gogoproto.nullable) = false];
}

message CreateTodoRequest {
	required Todo todo = 1;
}

message CreateTodoResponse {
	required bool success = 1;
	required int32 status = 2;
	optional Todo todo = 3;
	optional string error = 4 [(gogoproto.nullable) = false];
}

message GetTodoListRequest {
	optional uint64 page = 1 [default = 0];
	optional uint64 perPage = 2 [default = 25]; 
}

message GetTodoListResponse {
	required uint64 page = 1;
	required uint64 perPage = 2;
	required uint64 totalItems = 3;
	required uint64 totalPages = 4;
	repeated Todo members = 5;
}